Align 'Enter Game' button, fix ugly lines

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ p{
     line-height: 40px;
     position: relative;
     padding: 0;
-    margin: 0 25px;
+    margin: 0 16px;
 }
 .btn2:hover {
     text-shadow: 1px 1px 1px rgba(0,0,0,0.8);
@@ -60,6 +60,14 @@ p{
     color:white;
     text-decoration: none;
     text-decoration-color: white;
+}
+.btn2-wrapper {
+    display: inline-block;
+}
+.btn2-wrapper:hover {
+    transition: all .1s;
+    background: rgba(255,255,255,0.2);
+    border-color: #ffffff;
 }
 .btn2:before,
 .btn2:after {
@@ -78,10 +86,10 @@ p{
     right: -16px;
     border-left: none;
 }
-.btn2:hover,
-.btn2:hover:before,
-.btn2:hover:after {
-    transition: all .1s;
-    background: rgba(255,255,255,0.2);
-    border-color: #ffffff;
-}
+/*.btn2:hover,*/
+/*.btn2:hover:before,*/
+/*.btn2:hover:after {*/
+/*    transition: all .1s;*/
+/*    background: rgba(255,255,255,0.2);*/
+/*    border-color: #ffffff;*/
+/*}*/
